# EtabExtension

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
crates/e2k-parser/: Cargo.toml  README.md
crates/e2k-parser/examples/: basic_parse.rs  export_json.rs  query_elements.rs  validate_model.rs
crates/e2k-parser/src/: error.rs  lib.rs  panic_context.rs  types.rs
crates/e2k-parser/src/parser/: analysis.rs  geometry.rs  mod.rs  prelude.rs  primitives.rs  structural.rs
crates/e2k-parser/tests/: integration_tests.rs
crates/e2k-parser/tests/fixtures/: sample.e2k
crates/ext/: agents.md
crates/ext-api/: Cargo.toml
crates/ext-api/src/: lib.rs
crates/ext-core/: Cargo.toml
crates/ext-core/src/: lib.rs
crates/ext-db/: Cargo.toml
crates/ext-db/src/: lib.rs
crates/ext-error/: Cargo.toml
crates/ext-error/src/: lib.rs
crates/ext-tauri/: Cargo.toml  tauri.conf.json
crates/ext-tauri/capabilities/: default.json
crates/ext-tauri/src/: commands.rs  lib.rs
crates/ext/skill/: SKILL.md
crates/ext/skill/references/: ai.md  concepts.md  examples.md  reference.md  sidecar.md  workflow.md
e2k-parser/: Cargo.toml
e2k-parser/src/: lib.rs
e2k-parser/src/model/: analysis.rs  core.rs  design.rs  geometry.rs  loading.rs  mod.rs  structural.rs
e2k-parser/src/parser/: E2KModel.rs  ModelStatistics.rs  mainParser.rs  mod.rs  models.rs  parser.rs  primitives.rs
e2k-parser/src/parser/Utils/: error.rs  io.rs  query.rs
e2k-parser/src/parser/sections/: analysis.rs  mod.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
