# Root Cargo.toml (workspace configuration)
[workspace]
members = [
    "src-tauri",
    "crates/e2k-parser"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["dothanhtupt@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/tadodev/EtabExtension"

[workspace.dependencies]
# Shared dependencies across workspace members
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"


# E2K Parser specific
nom = "8.0.0"  # For parsing
encoding_rs = "0.8.35"  # For Windows-1251 encoding
regex = "1.12.2"


# Database
# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }

# Data Processing
polars = { version = "0.52.0", features = ["full"] }

# Syntax Highlighting
syntect = "5.3.0"

# Database
sea-orm = { version = "2.0.0-rc.28", features = ["full"] }
sea-orm-migration = "2.0.0-rc.28"

# Git
git2 = "0.20.3"

# Export
printpdf = "0.8.2"
rust_xlsxwriter = "0.92.3"

# Utilities
uuid = { version = "1.11", features = ["full"] }
chrono =  "0.4.42"
thiserror = "2.0.17"
anyhow = "1.0.100"
validator = { version = "0.20.0", features = ["full"] }

# Logging
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Performance
rayon = "1.11.0"
dashmap = "7.0.0-rc2"
once_cell = "1.21.3"

# File Watching (Optional)
notify = "8.2.0"

# Scripting (Optional)
rhai = "1.23.6"

tempfile = "3.24.0"
pretty_assertions = "1.4.1"
criterion = "0.8.1"
proptest = "1.9.0"
tokio-test = "0.4.5"

[profile.dev]
# Faster compile times for development
opt-level = 0
debug = true


[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

[profile.bench]
codegen-units = 16          # Make compiling criterion faster (16 is the default, but profile.release sets it to 1)
lto = "thin"                # Similarly, speed up linking by a ton