[workspace]
members = [
    "crates/ext-core",
    "crates/ext-error",
    "crates/ext-db",
    "crates/ext-api",
    "crates/ext-tauri"
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Internal crates
ext-core = { path = "crates/ext-core" }
ext-error = { path = "crates/ext-error" }
ext-db = { path = "crates/ext-db" }
ext-api = { path = "crates/ext-api" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.49", features = ["full"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "11.1.0", features = ["serde-compat"] }
dirs = "5.0"

[profile.dev]
incremental = false
debug = "line-tables-only"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
