[workspace]
members = [
    # Crates classified as extensions
    "crates/ext-core",          # 📄Core types and capabilities, a catch all that could be split into smaller crates.
    "crates/ext-error",         # 📄Error codes to communicate specific failures; JSON Error for frontends.
    "crates/ext-db",            # 📄Abstractions over Sqlite databases and Caches, with transaction and synchronization support.
    "crates/ext-api",           # 📄A project-based API to used by all clients (CLI, GUI, etc)
    "crates/ext-tauri"          # Should be reviewed to mostly use `ext-api`
]
resolver = "2"

[workspace.package]
repository = "https://github.com/tadodev/EtabSharp"
edition = "2024"
authors = ["EtabExtension Contributors "]


[workspace.dependencies]
# Internal crates
ext-core = { path = "crates/ext-core" }
ext-error = { path = "crates/ext-error" }
ext-db = { path = "crates/ext-db" }
ext-api = { path = "crates/ext-api" }

# External dependencies
tokio = { version = "1.49", features = ["full"] }

serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0.148"

git2 = { version = "0.20.3", features = [
    "vendored-openssl",
    "vendored-libgit2",
] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

thiserror = "2.0.18"
anyhow = "1.0.100"
parking_lot = "0.12.4"
futures = "0.3.31"
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tempfile = "3.24"
rand = "0.9.2"
notify-rust = "4.11.7"
git2-hooks = { version = "0.6.0" }
itertools = "0.14.0"
dirs = "6.0.0"

rmcp = { version = "0.14.0", default-features = false, features = [
    "base64",
    "server",
    "macros",
] }

serde_json_lenient = "0.2.4"
reqwest = { version = "0.13.1", default-features = false, features = [
    "rustls-tls",
    "json",
] }
chrono = { version = "0.4.43", default-features = false, features = ["std"] }
md5 = "0.8.0"
sha2 = "0.10"
bitflags = "2.10.0"
notify = "8.2.0"
snapbox = "0.6.23"
url = "2.5.7"

petgraph = { version = "0.8.3", default-features = false, features = [
    "stable_graph",
    "std",
] }

schemars = { version = "1.2.0", default-features = false, features = [
    "std",
    "derive",
] }

async-openai = { version = "0.31.1", default-features = false, features = [
    "rustls",
    "chat-completion",
] }

open = "5.3.2"
regex = { version = "1.12.3", default-features = false, features = [
    "std",
    "unicode",
] }
clap = { version = "4.5.57", default-features = false, features = [
    "derive",
    "std",
    "help",
    "unstable-markdown",
] }

tracing-forest = { version = "0.3.0" }
sysinfo = { version = "0.37.2", default-features = false }
shell-words = "1.1.1"
nonempty = "0.12.0"
self_cell = "1.2.2"
unicode-segmentation = "1.12.0"


sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
ts-rs = { version = "12.0.1", features = ["serde-compat", "no-serde-warnings"] }

[profile.dev]
incremental = false
debug = "line-tables-only"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
