[package]
name = "ext-db"
version = "0.1.0"
edition.workspace = true

[dependencies]
ext-core = { workspace = true }
ext-error = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }