[package]
name = "ext-tauri"
version = "0.1.0"
description = "Workspace management for etabs and "
authors = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.6.0"

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dirs = {workspace = true }

ext-core = { workspace = true }
ext-api = { workspace = true }
ext-db = { workspace = true }
ext-error = { workspace = true }

