[package]
name = "ext-tauri"
version = "0.0.0"
description = "Workspace management for etabs and "
authors = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
ext-core = { workspace = true }
ext-api = { workspace = true }
ext-db = { workspace = true }
ext-error = { workspace = true }

tauri = { version = "^2.10.1", features = ["unstable"] }
tauri-plugin-single-instance = { version = "2.3.7", features = ["deep-link"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"
tauri-plugin-log = "2.8.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-clipboard-manager = "2.3.2"

console-subscriber = "0.5.0"

serde = { workspace = true }
serde_json = { workspace = true }
parking_lot.workspace = true
log = "^0.4.29"
git2.workspace = true
# The features here optimize for performance.
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tracing.workspace = true
tracing-appender = "0.2.4"
tracing-subscriber.workspace = true
tracing-forest.workspace = true
open.workspace = true
dirs = {workspace = true }
uuid.workspace = true
tauri-plugin-deep-link = "2.4.6"

[features]
default = []

